<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:padding="10dp">


    <TextView
        android:id="@+id/setPropertyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="English Name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/beforPropertyNameButton"
        app:layout_constraintStart_toEndOf="@+id/beforPropertyNameButton"
        app:layout_constraintTop_toTopOf="@+id/beforPropertyNameButton" />

    <ImageView
        android:id="@+id/nextPropertyNameButton"
        android:layout_width="35dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:tint="@color/nextButtonActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/beforPropertyNameButton"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/befor" />

    <EditText
        android:id="@+id/setPropertyNameInput"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/nextPropertyNameButton"
        app:layout_constraintEnd_toStartOf="@+id/nextPropertyNameButton"
        app:layout_constraintStart_toEndOf="@+id/setPropertyName"
        app:layout_constraintTop_toTopOf="@+id/nextPropertyNameButton" />

    <Switch
        android:id="@+id/setRequireProperty"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/require"
        app:layout_constraintEnd_toEndOf="@+id/setPropertyNameInput"
        app:layout_constraintStart_toStartOf="@+id/setPropertyName"
        app:layout_constraintTop_toBottomOf="@+id/setPropertyNameInput" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/min"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/setRequireProperty"
        app:layout_constraintTop_toBottomOf="@+id/setRequireProperty" />

    <EditText
        android:id="@+id/setPropertyMinChoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="Min Of Choices"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/setRequireProperty"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/max"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/setPropertyMaxChoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Max Of Choices"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/setPropertyMinChoice"
        app:layout_constraintStart_toStartOf="@+id/setPropertyMinChoice"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>