<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="90dp">

    <ImageView
        android:id="@+id/propertyBackgroundColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/propertyColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="0dp"
        android:layout_height="21.3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/propertyBackgroundColor"
        app:srcCompat="@color/propertyTopTransparent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="0dp"
        android:layout_height="22.4dp"
        app:layout_constraintBottom_toBottomOf="@+id/propertyBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/propertyBottomTransparent" />

    <TextView
        android:id="@+id/propertyName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAUSS"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/deleteProperty2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/propertyBackgroundColor"
        app:srcCompat="@drawable/whiteletterx" />

    <TextView
        android:id="@+id/detailNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:textColor="@color/gold"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/propertyBackgroundColor" />

    <Switch
        android:id="@+id/propertyRequire"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:text="@string/require"
        android:textColor="@color/gold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/propertyBackgroundColor" />

    <ImageView
        android:id="@+id/modifyButton2"
        android:layout_width="23dp"
        android:layout_height="17dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/propertyName2"
        app:layout_constraintEnd_toEndOf="@+id/propertyBackgroundColor"
        app:layout_constraintStart_toEndOf="@+id/propertyName2"
        app:layout_constraintTop_toTopOf="@+id/propertyName2"
        app:srcCompat="@drawable/write" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="47dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:text="@string/min"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/propertyBackgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/minDetail"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="44dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/max"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/maxDetail"
        app:layout_constraintEnd_toStartOf="@+id/maxDetail"
        app:layout_constraintTop_toTopOf="@+id/maxDetail" />

    <TextView
        android:id="@+id/maxDetail"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/propertyBackgroundColor"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <ImageView
        android:id="@+id/detailButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@color/Transparent" />

    <ImageView
        android:id="@+id/modifyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/modifyButton2"
        app:layout_constraintTop_toTopOf="@+id/detailButton"
        app:srcCompat="@color/Transparent" />

    <ImageView
        android:id="@+id/deleteProperty"
        android:layout_width="27dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toTopOf="@+id/detailButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/propertyBackgroundColor"
        app:srcCompat="@color/Transparent" />

    <TextView
        android:id="@+id/detailNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="5"
        android:textColor="@color/gold"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toStartOf="@+id/detailNumber2"
        app:layout_constraintTop_toTopOf="@+id/propertyBackgroundColor" />

</androidx.constraintlayout.widget.ConstraintLayout>