<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragement.SettingFragement">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/include_english"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/divider8" />

        <Spinner
            android:id="@+id/priceUnitSpinner"
            android:layout_width="235dp"
            android:layout_height="34dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/restaurantNameSetting"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/priceunit"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />

        <View
            android:id="@+id/divider7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/setRestaurantNameButton"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <View
            android:id="@+id/divider8"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/divider7"
            app:layout_constraintStart_toStartOf="@+id/divider7"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <CheckBox
            android:id="@+id/englishLanguageCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/priceUnitSpinner"
            app:layout_constraintStart_toStartOf="@+id/priceUnitSpinner"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/restaurant_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/restaurantNameSetting"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/restaurant_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/setRestaurantNameButton"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <Button
            android:id="@+id/setRestaurantNameButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="@+id/restaurantNameSetting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restaurantNameSetting" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/waitForProcess"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:elevation="2dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/waitForProcess2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blackTransparent"
                android:src="@color/blackTransparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarSetting"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="70dp"
                app:layout_constraintEnd_toEndOf="@+id/waitForProcess2"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tryAgainSetting"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="56dp"
                android:text="Try Again"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/progressBarSetting"
                app:layout_constraintStart_toStartOf="@+id/progressBarSetting"
                app:layout_constraintTop_toBottomOf="@+id/progressBarSetting" />

            <TextView
                android:id="@+id/stepProgressSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/progressBarSetting"
                app:layout_constraintEnd_toEndOf="@+id/progressBarSetting"
                app:layout_constraintStart_toStartOf="@+id/progressBarSetting" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>